# identra

./: .env.example  .gitignore  BRAIN_SERVICE_INTEGRATION.md  Cargo.toml  Justfile  README.md  package.json  pnpm-lock.yaml  setup-db.sh  turbo.json
apps/api-rust/: Cargo.toml
apps/enclave-service/: Cargo.toml
apps/tunnel-gateway/: Cargo.toml  SUPABASE_AUTH.md
apps/tunnel-gateway/examples/: test_vault_ipc.rs
apps/tunnel-gateway/src/: database.rs  error.rs  ipc_client.rs  lib.rs  main.rs
apps/tunnel-gateway/src/auth/: jwt.rs  middleware.rs  mod.rs  service.rs  supabase_client.rs  user_db.rs
apps/tunnel-gateway/src/services/: health.rs  memory.rs  mod.rs  vault.rs
apps/vault-daemon/: Cargo.toml
apps/vault-daemon/src/: error.rs  ipc.rs  keychain.rs  keychain_tests.rs  lib.rs  main.rs  memory.rs
apps/worker-notifications/: Cargo.toml
clients/ghost-desktop/: index.html  launcher.html  package.json  tailwind.config.js
clients/ghost-desktop/src/: App.css  App.jsx
clients/ghost-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/ghost-desktop/src-tauri/src/: commands.rs  ipc_client.rs  lib.rs  main.rs  state.rs
clients/ghost-desktop/src/pages/: ChatInterface.jsx  Launcher.jsx
docs/: IPC_PROTOCOL_FIX.md  KEYCHAIN_IMPLEMENTATION.md
examples/: memory_client.py
libs/identra-auth/: Cargo.toml
libs/identra-core/: Cargo.toml
libs/identra-crypto/: Cargo.toml
libs/identra-crypto/src/: aead.rs  error.rs  kdf.rs  lib.rs  random.rs
libs/identra-proto/: Cargo.toml  build.rs
libs/identra-proto/proto/: auth.proto  health.proto  memory.proto  vault.proto
libs/identra-proto/src/: lib.rs
tools/: quick_ipc_test.sh  test_ipc.sh
