[workspace]
resolver = "2"

members = [
    "apps/tunnel-gateway",
    "apps/vault-daemon",
    "libs/identra-core",
    "libs/identra-crypto",
    "libs/identra-proto",
    "libs/identra-auth",
    "clients/ghost-desktop/src-tauri", # <--- ADD THIS
]

[profile.release]
lto = true
strip = true
codegen-units = 1
