[package]
name = "api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
fred = { version = "10.1.0", features = ["serde-json"] }