[package]
name = "tunnel-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tunnel-gateway"
path = "src/main.rs"

[dependencies]
# Shared Libraries
identra-core = { path = "../../libs/identra-core" }
identra-proto = { path = "../../libs/identra-proto" }

# gRPC
tonic = "0.12"
prost = "0.13"

# HTTP Server (for REST endpoints if needed)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# IPC Communication
interprocess = { version = "2.2", features = ["tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
prost-types = "0.13"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Database (encrypted SQLite)
rusqlite = { version = "0.32", features = ["bundled"] }
# Note: For encryption, use rusqlite with sqlcipher feature: 
# rusqlite = { version = "0.32", features = ["bundled", "sqlcipher"] }
# Or use separate sqlcipher crate for production
