[package]
name = "tunnel-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tunnel-gateway"
path = "src/main.rs"

[dependencies]
identra-core = { path = "../../libs/identra-core" }
identra-proto = { path = "../../libs/identra-proto" }
tonic = "0.12"
prost = "0.13"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
interprocess = { version = "2.2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
prost-types = "0.13"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# --- FIXED DEPENDENCIES ---
# Upgraded to v4 to support ort v2
fastembed = "4" 
# REMOVED explicit 'ort' dependency to prevent version conflicts.
# fastembed v4 will automatically pull in the correct compatible version of ort.

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "json"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }