[package]
name = "identra-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# AEAD Cipher
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

# Key Derivation
argon2 = { version = "0.5", features = ["std"] }
blake3 = "1.5"

# Random Generation
rand = "0.8"
getrandom = "0.2"

# Encoding
base64 = "0.22"
hex = "0.4"

# Zero-on-drop
zeroize = { version = "1", features = ["derive"] }

# Error Handling
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
