[package]
name = "ghost-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ghost_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- YOUR SHARED LIBRARIES ---
identra-core = { path = "../../../libs/identra-core" }     # <--- ADD THIS
identra-crypto = { path = "../../../libs/identra-crypto" } # <--- ADD THIS
identra-proto = { path = "../../../libs/identra-proto" }   # <--- ADD THIS

# --- TAURI DEPENDENCIES ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
